syntax = "proto3"; /* default is proto2 */

/* *
 * If no explicit java_package option is given in the .proto file, then by default the proto package
 * (specified using the “package” keyword) will be used
 * */
option java_package = "org.example.proto";

/* The greeting service definition. */
service Greeter {
  /* Sends a greeting */
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  /* Sends another greeting */
  rpc SayHelloAgain (HelloRequest) returns (HelloResponse) {}
}

/* The request message containing the user's name.*/
message HelloRequest {
  /* *
   * Messages have field that start from 1 (zero is not allowed. Example of others types are:
   * int32, boolean, enum etc.
   * */
  string name = 1;
}

/* The response message containing the greetings */
message HelloResponse {
  string message = 1;
}